Revert ""Imagens da Ilustração""
This reverts commit 498af69320995e9e88ea1f85138b54929b2ade04.#

--- a/Front-end/src/Pages/Login/login.html
+++ b/Front-end/src/Pages/Login/login.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="IlustracãoPrincipal">
-        <img src="/Front-end/src/assets/Ilustração.png" class="illustration" />
+        <img src="/img/Ilustração.png" class="illustration" />
       </div>
     </div>
   </body>
