"Tela home do Mapa"

--- a/Front-end/src/Pages/Login/login.html
+++ b/Front-end/src/Pages/Login/login.html
@@ -7,11 +7,11 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="container">
-      <div class="LogoPrincipal">
-        <img src="/Front-end/src/assets/logo HuMap.png" class="logo" alt="HuMap logo" />
+    <div class="container-principal-login">
+      <div class="coluna-formulario-login">
+        <img src="/Front-end/src/assets/logo HuMap.png" class="imagem-logo-login" alt="HuMap logo" />
 
-        <form action="" class="form">
+        <form action="" class="formulario-login">
           <label>Email</label>
           <input
             type="email"
@@ -29,15 +29,15 @@
             title="A senha deve ter no mínimo 6 caracteres"
           />
 
-          <a href="/Pages/Recuperação/index.html" class="senha-esquecida">Esqueci a minha senha</a>
+          <a href="/Pages/Recuperação/index.html" class="link-senha-esquecida-login">Esqueci a minha senha</a>
           <button type="submit">Login</button>
 
-          <p class="registra">Não tem uma conta? <a href="/Front-end/src/Pages/cadastro/cadastro.html">Cadastre-se</a></p>
+          <p class="texto-registro-login">Não tem uma conta? <a href="/Front-end/src/Pages/cadastro/cadastro.html">Cadastre-se</a></p>
         </form>
       </div>
 
-      <div class="IlustracãoPrincipal">
-        <img src="/img/Ilustração.png" class="illustration" />
+      <div class="coluna-ilustracao-login">
+        <img src="/Front-end/src/assets/Ilustração.png" class="imagem-ilustracao-login" />
       </div>
     </div>
   </body>
