--- a/Front-end/src/Pages/Feed/feed.html
+++ b/Front-end/src/Pages/Feed/feed.html
@@ -13,7 +13,7 @@
 
   <div class="feed-header">
     <button class="botao-voltar-feed" onclick="window.location.href='{% url 'core:home' %}'" title="Voltar">
-      <img src="{% static 'assets/seta-esquerda.png' %}" alt="Voltar" class="imagem-seta-azul">
+      <img src="{% static 'assets/deslize-para-a-esquerda.png' %}" alt="Voltar" class="imagem-seta-azul">
     </button>
   </div>
 
