--- a/Front-end/src/Pages/Login/login.html
+++ b/Front-end/src/Pages/Login/login.html
@@ -13,7 +13,7 @@
     <div class="container-principal-login">
       <div class="coluna-formulario-login">
         
-        <img src="{% static 'assets/logo HuMap.png' %}" class="imagem-logo-login" alt="HuMap logo" />
+        <img src="{% static 'assets/Logo HuMap Nova (1).png' %}" class="imagem-logo-login" alt="HuMap logo" />
 
         <form action="{% url 'users:login' %}" method="POST" class="formulario-login">
           
