--- a/Front-end/src/Pages/SobreNos/sobre.html
+++ b/Front-end/src/Pages/SobreNos/sobre.html
@@ -15,6 +15,9 @@
         O HuMap é uma rede social de impacto local criada para mapear, denunciar e acompanhar problemas em comunidades, bairros e cidades, promovendo uma nova forma de participação cidadã. A iniciativa nasceu de um grupo de jovens estudantes do Senac Recife - PE, movidos pelo desejo de transformar indignação em ação, por meio de uma ferramenta simples, transparente e colaborativa que fortalece a cidadania no dia a dia.
     </p>
     
+    <button class="btn-voltar-padrao" onclick="window.location.href='{% url 'core:home' %}'" title="Voltar">
+        <img src="{% static 'assets/deslize-para-a-esquerda.png' %}" alt="Voltar">
+    </button>
     <div class="cards-container">
 
         <div class="card">
