--- a/Front-end/src/Pages/Suporte/suporte.html
+++ b/Front-end/src/Pages/Suporte/suporte.html
@@ -182,7 +182,7 @@
         </div>
         
         <div class="container-layout-suport">
-            <img src="{% static 'assets/logo HuMap.png' %}" class="imagem-logo-suport" alt="HuMap">
+            <img src="{% static 'assets/Logo HuMap Nova (1).png' %}" class="imagem-logo-suport" alt="HuMap">
             <div class="texto-info-suport">
                 <p>HuMap</p>
                 <p class="link-telefone-suport">Telefone: 9999-9999</p>
